# wasm-demo

./: .dockerignore  .gitignore  INSTRUCTIONS.md  NOTES.md  README.md  docker-compose.services.yaml  docker-compose.yaml  justfile
delivery-model/: producer.py
delivery-model-rs/: Cargo.toml  NOTES.md  dataset.jsonl  model.safetensors  openapi.json
delivery-model-rs/config/: default.toml
delivery-model-rs/src/: data.rs  lib.rs  main.rs  model.rs  settings.rs
delivery-model-rs/test/k6/: script.js
delivery-producer-rs/: Cargo.toml  README.md
delivery-producer-rs/config/: default.toml
delivery-producer-rs/src/: main.rs
dockerfiles/: inference-web.dockerfile  rdkafka-producer.dockerfile  train.dockerfile
foodtime-rs/: .gitignore  Cargo.toml  transform.yaml  unique-types.json
foodtime-rs/.cargo/: config.toml
foodtime-rs/src/: main.rs
legacy/: Dockerfile  README.md  pyproject.toml
