[package]
name = "delivery-model"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
candle-core = "0.8.4"
candle-nn = "0.8.4"
futures = "0.3.31"
rdkafka = { version = "0.25", features = ["cmake-build"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tokio-stream = "0.1.17"

[features]
mkl = ["candle-core/mkl"]
accelerate = ["candle-core/accelerate"]
