[package]
name = "delivery-model"
version = "0.1.0"
edition = "2021"

[lib]
name = "delivery_model"
path = "src/lib.rs"


[dependencies]
anyhow = "1.0.97"
candle-core = "0.8.4"
candle-nn = "0.8.4"
clap = { version = "4.5", features = ["derive"] }
config = "0.15.11"
futures = "0.3.31"
rdkafka = { version = "0.37", features = ["cmake-build"] }
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tokio-stream = "0.1.17"
utoipa = { version = "5.3.1", features = ["rocket_extras"] }
utoipa-redoc = { version = "6.0.0", features = ["rocket"] }

[features]
mkl = ["candle-core/mkl"]
accelerate = ["candle-core/accelerate"]
